fixes #145 Add an endpoint to invoke the modules get and post to reload config
