# src/main/java/com/networknt/controller/handler/ServicesModulePostHandler.java
@@ -1,0 +1,32 @@
+package com.networknt.controller.handler;
+
+import com.networknt.body.BodyHandler;
+import com.networknt.config.Config;
+import com.networknt.controller.model.ReloadModule;
+import com.networknt.handler.LightHttpHandler;
+import com.networknt.http.HttpMethod;
+import com.networknt.http.RequestEntity;
+import com.networknt.http.ResponseEntity;
+import io.undertow.server.HttpServerExchange;
+import io.undertow.util.HeaderMap;
+import java.util.Deque;
+import java.util.Map;
+
+/**
+For more information on how to write business handlers, please check the link below.
+https://doc.networknt.com/development/business-handler/rest/
+*/
+public class ServicesModulePostHandler implements LightHttpHandler {
+
+    @Override
+    public void handleRequest(HttpServerExchange exchange) throws Exception {
+        HeaderMap requestHeaders = exchange.getRequestHeaders();
+        Map<String, Deque<String>> queryParameters = exchange.getQueryParameters();
+        Map<String, Deque<String>> pathParameters = exchange.getPathParameters();
+        HttpMethod httpMethod = HttpMethod.resolve(exchange.getRequestMethod().toString());
+        Map<String, Object> bodyMap = (Map<String, Object>)exchange.getAttachment(BodyHandler.REQUEST_BODY);
+        ReloadModule requestBody = Config.getInstance().getMapper().convertValue(bodyMap, ReloadModule.class);
+        exchange.setStatusCode(200);
+        exchange.getResponseSender().send("");
+    }
+}
